# anatomia-de-la-motosierra

./: .gitignore  CITATION.cff  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 009feb824af2_add_processed_field.py  0a6f632b5793_se_elimina_indice_por_root_hash.py  121bdcbd9537_tree_cambia_su_unique_constraint.py  20cbabaa1f53_officialdocument_tiene_atributo_.py  2bc82cb992ed_scrappeddocument_debe_tener_fecha.py  2fb9ef41821e_desvinculo_objective_de_officialdocument.py  2fce11a6e5fc_agrego_fecha_al_modelo_scrappeddocument.py  376161c45111_objectives_as_lists_and_keys_as_strings.py  38a1b1d1e287_los_officialdocuments_tienen_clave_.py  429b96ffd175_root_hash_column_added_to_tree_model.py  4abb5474f0d9_los_cargos_tienen_numero_de_orden.py  6a20523873bc_elimino_el_path_y_la_fecha_del_tree_del_.py  6b47a43ff8b6_refactor_en_la_columna_hash_del_tree.py  722eed1746b0_prompt_incluye_el_tree_id.py  751e26380d04_officialdocument_column_removed_from_.py  768f43b31f67_nuevo_estado_de_unidad_para_cambios_en_.py  7c78357db24a_unidad_clase_no_es_nullable.py  7ceca51c57a3_elimino_variable_processed_de_.py  82178e7f2916_hashes_a_uuids.py  846b6ca056cf_tree_tiene_prompts_y_cada_prompt_tiene_.py  8ac31127e859_objectives_as_nested_lists.py  92ae064c3e0f_los_officialdocuments_ahora_tienen_.py  93f0c6f1b3da_los_tree_tienen_objectives.py  94178775c651_creo_modelo_prompt.py  a1e5094bc4bb_filtro_por_administracion_central.py  (+15 more)
analysis/: dashboard.ipynb  heatmaps.ipynb  heatmaps_viewer.ipynb  lemas.ipynb
chainsaw/: borabot.py  clusters.py  db.py  plot.py
data/: database.db
(+40 files in other folders)
