[project]
name = "chainsaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "alembic>=1.16.1",
    "alphashape>=1.3.1",
    "anywidget>=0.9.18",
    "beautifulsoup4>=4.13.4",
    "dateparser>=1.2.2",
    "faiss-cpu>=1.11.0",
    "hdbscan>=0.8.40",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "more-itertools>=10.7.0",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "ollama>=0.4.8",
    "openai>=1.99.1",
    "pandas>=2.2.3",
    "pdfminer-six>=20250506",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "rapidfuzz>=3.14.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "selenium>=4.33.0",
    "sentence-transformers>=4.1.0",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.41",
    "suitable-class-finder>=0.1.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "undetected-chromedriver>=3.5.5",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chainsaw"]
